--- a/04 todo/package.json
+++ b/04 todo/package.json
@@ -10,17 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.9",
-    "@react-navigation/native-stack": "^7.3.13",
+    "@react-navigation/drawer": "^7.3.12",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.3.1",
-    "react-native": "0.64.3",
+    "metro": "^0.82.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.64.3",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
